main functions completed, Readme and deployment ongoing
